shrink the nav bar shrink the player stat rows add horizontal scrollbar to play area fix firefox to not grow the play area vertically beyond the screen with no way of scrolling extend the chat window full height make the card zoom overlay fix card row spacing

--- a/less/application.less
+++ b/less/application.less
@@ -83,7 +83,7 @@
 .sidebar {
   position: absolute;
   left: 0;
-  top: 50px;
+  top: 40px;
   bottom: 0;
   background-color: fade(@navbar-inverse-bg, 80%);
 
