--- a/less/chat.less
+++ b/less/chat.less
@@ -124,8 +124,8 @@
 .chat-icon {
   background: url('/img/messages.svg') no-repeat;
   display: inline-block;
-  width: 24px;
-  height: 24px;
+  width: 18px;
+  height: 18px;
   filter: invert(100%);
 }
 
