--- a/less/site.less
+++ b/less/site.less
@@ -52,7 +52,7 @@ h4 {
 }
 
 .bg {
-  padding-top: 75px;
+  padding-top: 50px;
   background-image: url("/img/background2.png");
 
   height: 100%;
@@ -88,6 +88,29 @@ h4 {
   display: flex;
   flex-direction: column;
   height: 100%;
+}
+
+.navbar-sm { 
+  min-height: 40px; 
+  height: 40px; 
+}
+
+.navbar-sm .navbar-brand { 
+  padding: 0px 12px;
+  font-size: 18px;
+  line-height: 40px;
+}
+
+.navbar-sm .navbar-nav > li > a {  
+  padding-top: 0px; 
+  padding-bottom: 0px; 
+  line-height: 40px; 
+}
+
+.navbar-sm .navbar-nav > li > span {  
+  padding-top: 0px; 
+  padding-bottom: 0px; 
+  line-height: 40px; 
 }
 
 a {
@@ -134,7 +157,7 @@ a {
 }
 
 .content {
-  padding-top: 60px;
+  padding-top: 45px;
 }
 
 .navbar {
